fixed nav bug and made header smaller on mobile

--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -23,6 +23,8 @@
       margin-right: 10px;
     }
     @media (max-width: $res-mobile) {
+      height: 34px;
+      width: 34px;
       margin-right: 0;
     }
   }
