--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -37,7 +37,7 @@
       transform-origin:  top;
       transition: transform .2s linear, opacity .2s ease;
       left: 0;
-      margin-top: 10px;
+      margin-top: 8px;
       opacity: 1;
     }
     &--mobile-hidden {
